# ingest

./: .env  Cargo.toml
migrations/: 001_sample_data.sql  002_create_partitions.sql  003_indexes.sql  004_change_type.sql  005_env_regions_column.sql  006_new_index.sql
src/: main.rs
src/handlers/: ingest.rs
src/types/: mod.rs
src/utils/: buffer.rs  db.rs  mod.rs  worker.rs
