[package]
name = "time"
version = "0.1.0"
edition = "2024"

[dependencies]
async-trait = "0.1.89"
axum = "0.8.8"
chrono = { version = "0.4.44", features = ["serde"] }
dotenvy = "0.15.7"
serde = {version = "1.0.228", features = ["derive"]}
serde_json = "1.0.149"
sqlx = {version = "0.8.6", features = ["runtime-tokio", "tls-rustls", "postgres", "migrate", "bigdecimal", "uuid", "chrono", "macros", "json"] }
tokio = {version = "1.49.0", features = ["full"]}
uuid = { version = "1.21.0", features = ["v4", "serde"] }
validator = { version = "0.20.0", features = ["derive"] }
bigdecimal = { version = "0.4", features = ["serde"] } 